<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Verde100"
    tools:context=".ui.Login.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="88dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0"/>

        <TextView
            android:id="@+id/tituloLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_titulo"
            style="@style/Titulo1"
            app:layout_constraintTop_toBottomOf="@id/imageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.02"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/EtContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tituloLogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginHorizontal="48dp"
            app:layout_constraintVertical_chainStyle="spread_inside"
            app:layout_constraintVertical_bias="0.2">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_border"
                android:hint="@string/email"
                style="@style/Normal"
                android:textColorHint="@color/Gris"
                android:textColor="@color/black"
                android:drawableStart="@drawable/ic_user"
                android:drawablePadding="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:paddingVertical="8dp"
                android:paddingHorizontal="4dp"/>


            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_border"
                android:hint="@string/password"
                style="@style/Normal"
                android:textColorHint="@color/Gris"
                android:textColor="@color/black"
                android:inputType="textPassword"
                android:drawableStart="@drawable/ic_contrasena"
                android:drawableEnd="@drawable/ic_ver_contrasena"
                android:drawablePadding="10dp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/email"
                android:paddingVertical="8dp"
                android:paddingHorizontal="4dp"
                android:paddingEnd="8dp"/>

            <TextView
                android:id="@+id/olvidasteContrasena"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/olvide_contrasena"
                style="@style/Normal"
                android:textColor="@color/Azul500"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@id/password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.1"
                app:layout_constraintHorizontal_bias="1"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


        <Button
            android:id="@+id/btnIngresar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="250dp"
            android:text="@string/ingresar"
            android:background="@drawable/button_rectangle"
            style="@style/Titulo3"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/EtContainer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.8"
            android:paddingHorizontal="48dp"/>



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>